# tar-dedup

./: .gitignore  Cargo.toml  Readme.md  Reflection.md  TODO.md  build.rs  flake.nix  launch-ide.sh
crates/sparse-cp/: Cargo.toml
crates/sparse-cp/examples/: mkfile.rs
crates/sparse-cp/src/: lib.rs  main.rs
crates/tar-dedup/: Cargo.toml
crates/tar-dedup-cli/: Cargo.toml
crates/tar-dedup-cli/src/: main.rs
crates/tar-dedup-cli/tests/: cli_smoke.rs
crates/tar-dedup/examples/: file_info.rs
crates/tar-dedup/src/: archive.rs  cli.rs  common.rs  config.rs  db.rs  error.rs  lib.rs  pipeline.rs  tar_writer.rs  unarchive.rs
crates/tar-dedup/src/archive/: dedup.rs  filter.rs  hash.rs  inventory.rs  sparsify.rs  stage.rs  tar_writer.rs
crates/tar-dedup/src/common/: files.rs  xattr.rs
crates/tar-dedup/src/db/: archive.rs  common.rs  content_id.rs  dedup.rs  extract.rs  filter.rs  flags.rs  hash.rs  inventory.rs  schema.rs  sparsify.rs  types.rs
crates/tar-dedup/src/pipeline/: extract.rs  inventory.rs  xattr.rs
crates/tar-dedup/src/unarchive/: cleanup.rs  permissions.rs  place.rs  rehash.rs  scan.rs
crates/tar-dedup/tests/: db_extract.rs  types.rs
crates/tar-dedup/tests/common/: mod.rs
docs/: Archive State Changes.drawio  Unarchive State Changes.drawio
scripts/: create_files.sh
src/: cli.rs  config.rs  content_id.rs  db.rs  error.rs  lib.rs  main.rs  pipeline.rs  progress.rs  shutdown.rs  tar_reader.rs  tar_writer.rs  workers.rs
src/compression/: bzip.rs  gzip.rs  mod.rs  xz.rs
src/db/: archive.rs  content_id.rs  dedup.rs  extract.rs  hash.rs  inventory.rs  mod.rs  schema.rs  types.rs
src/pipeline/: archive.rs  dedup.rs  extract.rs  hash.rs  inventory.rs  mod.rs  stage.rs
tests/common/: mod.rs
