[package]
name = "tar-dedup"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tar = "0.4"
xz2 = { version = "0.1", features = ["static"] }
lzma-sys = "0.1"
flate2 = "1"
bzip2 = "0.5"
zstd = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
sha1 = "0.10"
base64 = "0.22"
walkdir = "2"
nix = { version = "0.29", features = ["user", "fs"] }
fs4 = "0.12"
rayon = "1"
signal-hook = "0.3"
num_cpus = "1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
