[package]
name = "tar-dedup"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
tar = { workspace = true }
xz2 = { workspace = true }
lzma-sys = { workspace = true }
flate2 = { workspace = true }
bzip2 = { workspace = true }
zstd = { workspace = true }
rusqlite = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
walkdir = { workspace = true }
nix = { workspace = true }
fs4 = { workspace = true }
rayon = { workspace = true }
signal-hook = { workspace = true }
num_cpus = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
filetime = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
path-clean = "1.0.1"

[dev-dependencies]
tempfile = { workspace = true }
