[package]
name = "tar-dedup"
version.workspace = true
edition.workspace = true

[features]
debug-force-utf8 = []

[dependencies]
clap = { workspace = true }
tar = { workspace = true }
xz2 = { workspace = true }
lzma-sys = { workspace = true }
flate2 = { workspace = true }
bzip2 = { workspace = true }
zstd = { workspace = true }
rusqlite = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
walkdir = { workspace = true }
nix = { workspace = true }
fs4 = { workspace = true }
rayon = { workspace = true }
signal-hook = { workspace = true }
num_cpus = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
filetime = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
path-clean = "1.0.1"
posix-acl = "1.2.0"
xattrs = "0.1.0"
selinux = "0.6.3"
serde_json = "1.0.150"

[dev-dependencies]
tempfile = { workspace = true }
